finished project calculator, completed styling

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Calculator</title>
 </head>
 <body>
+	<h1>CALCULATOR</h1>
 	<div class = "calculator">
 		<div id = "screen"></div>
 		<div class = "operations"></div>
